sovereign_pr_manager/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sovereignpr
  labels:
    app: sovereignprmanager
    component: automation
